# libwatchman

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  OWNERS  README  README.md  aclocal.m4  autogen.sh  bser.c  bser.h  bser_parse.c  bser_parse.h  bser_private.h  bser_write.c  bser_write.h  configure  configure.ac  proto.h  watchman.c  watchman.h
CMakeModules/: FindBrew.cmake  FindCheck.cmake
src/: CMakeLists.txt  watchman.c
tests/: CMakeLists.txt  Makefile.am  Makefile.in  bser2json.c  check_bser.c  check_watchman.c  json2bser.c  run_tests.sh  testBserEncoding.sh  testBserParsing.sh
tests/t/: array_array.bser  array_array.json  array_deep.bser  array_deep.json  array_empty.bser  array_hemogenous.bser  array_hemogenous.json  array_int.bser  array_int.json  array_string.bser  array_string.json  compact_array.bser  compact_array.json  compact_array_nuls.bser  compact_array_nuls.json  false.bser  int_huge.bser  int_huge.json  int_large.bser  int_large.json  int_neg.bser  int_neg.json  int_short.bser  int_short.json  int_short_neg.bser  int_short_neg.json  int_small.bser  int_small.json  int_small_signbit.bser  int_small_signbit.json  int_small_signed.bser  null.bser  object.bser  object.json  object_big.bser  object_big.json  object_empty.bser  real.bser  real.json  string_medium.bser  (+4 more)
