enable_testing()
find_package(Check REQUIRED)
find_package(Jansson REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} watchman jansson)
include_directories(. ../src)
add_executable(check_watchman check_watchman.c)
target_link_libraries(check_watchman ${LIBS})
add_test(check_watchman ${CMAKE_CURRENT_BINARY_DIR}/check_watchman)
